src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__cast_float64_to_uint16.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc(\n    sqlname = \"double_to_uint2\",\n    preserves_uniqueness = false,\n    inverse = to_unary!(super::CastUint16ToFloat64),\n    is_monotone = true\n)]\nfn cast_float64_to_uint16(a: f64) -> Result<u16, EvalError> {\n    let f = round_float64(a);\n    #[allow(clippy::as_conversions)]\n    if (f >= 0.0) && (f <= (u16::MAX as f64)) {\n        Ok(f as u16)\n    } else {\n        Err(EvalError::UInt16OutOfRange(f.to_string().into()))\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct CastFloat64ToUint16;
impl crate::func::EagerUnaryFunc for CastFloat64ToUint16 {
    type Input<'a> = f64;
    type Output<'a> = Result<u16, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        cast_float64_to_uint16(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastUint16ToFloat64)
    }
    fn is_monotone(&self) -> bool {
        true
    }
    fn preserves_uniqueness(&self) -> bool {
        false
    }
}
impl std::fmt::Display for CastFloat64ToUint16 {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("double_to_uint2")
    }
}
fn cast_float64_to_uint16(a: f64) -> Result<u16, EvalError> {
    let f = round_float64(a);
    #[allow(clippy::as_conversions)]
    if (f >= 0.0) && (f <= (u16::MAX as f64)) {
        Ok(f as u16)
    } else {
        Err(EvalError::UInt16OutOfRange(f.to_string().into()))
    }
}
