src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__ln.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: "#[sqlfunc(sqlname = \"lnf64\")]\nfn ln(a: f64) -> Result<f64, EvalError> {\n    if a.is_sign_negative() {\n        return Err(EvalError::NegativeOutOfDomain(\"ln\".into()));\n    }\n    if a == 0.0 {\n        return Err(EvalError::ZeroOutOfDomain(\"ln\".into()));\n    }\n    Ok(a.ln())\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct Ln;
impl crate::func::EagerUnaryFunc for Ln {
    type Input<'a> = f64;
    type Output<'a> = Result<f64, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        ln(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for Ln {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("lnf64")
    }
}
fn ln(a: f64) -> Result<f64, EvalError> {
    if a.is_sign_negative() {
        return Err(EvalError::NegativeOutOfDomain("ln".into()));
    }
    if a == 0.0 {
        return Err(EvalError::ZeroOutOfDomain("ln".into()));
    }
    Ok(a.ln())
}
